Fix for java 17